<resources>
    <string name="app_name">Calculator4</string>
    <string name="button_clear">C</string>
    <string name="error">Error</string>
    <string name="display_operations_default_text" />
    <string name="display_text_view_example">012345678901</string>
    <string name="text_del">del</string>
    <string name="text_multiplication">×</string>
    <string name="text_separation">÷</string>
    <string name="text_reset">c</string>
    <string name="text_subtraction">-</string>
    <string name="text_9">9</string>
    <string name="text_8">8</string>
    <string name="text_7">7</string>
    <string name="text_addition">+</string>
    <string name="text_6">6</string>
    <string name="text_5">5</string>
    <string name="text_4">4</string>
    <string name="text_3">3</string>
    <string name="text_2">2</string>
    <string name="text_1">1</string>
    <string name="text_result">=</string>
    <string name="text_dot">.</string>
    <string name="text_0">0</string>
    <string name="text_percent">%</string>
    <string name="text_test_complete_operations">test complete operations</string>
    <string name="text_test_value_1">test value1</string>
    <string name="text_test_value_2">test value2</string>
    <string name="text_move_digit">move digit</string>
</resources>